# DCON2026_M5stack

./: README.md
DCON-M5stack/: pyproject.toml
DCON-M5stack/src/: key_monitor.py
DCON-M5stack/tests/: test.py
