[project]
name = "dcon-m5stack"
version = "0.1.0"
description = ""
authors = [
    {name = "yuki-829",email = "yaayukysan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil (>=7.1.3,<8.0.0)",
    "pyserial (>=3.5,<4.0)",
]

[tool.poetry]
packages = [{include = "dcon_m5stack", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
